# bot_football

./: README.md
seatwatcher/: .envrc  .gitignore  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  requirements.docker.txt  requirements.txt
seatwatcher/alembic/: README  env.py
seatwatcher/alembic/versions/: 0001_initial.py
seatwatcher/configs/: seatwatcher.yaml
seatwatcher/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
seatwatcher/seatwatcher/: __init__.py  cli.py  config.py  db.py  factory.py  logging_utils.py  models.py  repository.py  watcher.py
seatwatcher/seatwatcher/notifiers/: base.py  console.py  emailer.py  slack.py
seatwatcher/seatwatcher/providers/: base.py  dummy.py  http_json.py
seatwatcher/seatwatcher/utils/: envsubst.py  secrets.py
